tests/ui/ferrocene/compiler-arguments/upper_c_rpath/upper_c_rpath_space-eq-invalid.rs
//@ check-fail
//@ compile-flags: -C rpath=invalid
//~? ERROR incorrect value

fn main() {}

// ferrocene-annotations: um_rustc_C_rpath
